--- a/.golangci.yml
+++ b/.golangci.yml
@@ -6,11 +6,15 @@ linters:
     - tagliatelle
     - wrapcheck
     - typecheck
+  errcheck:
+    exclude-functions:
+      - fmt:.*
+      - io/ioutil:^Read.*
+      - github.com/spf13/cobra:MarkFlagRequired
+      - github.com/spf13/viper:BindPFlag
 linters-settings:
   gocyclo:
     min-complexity: 11
-  errcheck:
-    ignore: fmt:.*,io/ioutil:^Read.*,github.com/spf13/cobra:MarkFlagRequired,github.com/spf13/viper:BindPFlag
   golint:
     min-confidence: 1.1
 issues:
