--- a/.github/workflows/build-linux-arm64.yml
+++ b/.github/workflows/build-linux-arm64.yml
@@ -52,18 +52,11 @@ jobs:
           docker rm temp
 
           # Package the artifacts
-          cd ./build
-          mkdir -p initia_${VERSION}
-          mv initiad initia_${VERSION}/
-          mv libmovevm.so initia_${VERSION}/libmovevm.${ARCH_NAME}.so
-          mv libcompiler.so initia_${VERSION}/libcompiler.${ARCH_NAME}.so
-          tar -czvf initia_${VERSION}_Linux_${ARCH_NAME}.tar.gz initia_${VERSION}
-          mv initia_${VERSION}_Linux_${ARCH_NAME}.tar.gz ../
-
-          # Check the build result
-          cd ..
-          ls -l
-          file initia_${VERSION}_Linux_${ARCH_NAME}.tar.gz
+          mkdir -p release-${GOOS}-${ARCH_NAME}
+          mv ./build/initiad ./release-${GOOS}-${ARCH_NAME}/initiad
+          mv ./build/libmovevm.so ./release-${GOOS}-${ARCH_NAME}/libmovevm.${ARCH_NAME}.so
+          mv ./build/libcompiler.so  ./release-${GOOS}-${ARCH_NAME}/libcompiler.${ARCH_NAME}.so
+          tar -czvf initia_${VERSION}_Linux_${ARCH_NAME}.tar.gz -C ./release-${GOOS}-${ARCH_NAME} initiad libmovevm.${ARCH_NAME}.so libcompiler.${ARCH_NAME}.so
 
           # Remove the builder
           docker buildx rm arm64-builder
