--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,7 +25,7 @@ env:
 jobs:
   initiad:
     name: Initiad
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     permissions:
       contents: read
@@ -66,7 +66,7 @@ jobs:
     if: ${{ startsWith(github.ref, 'refs/tags/') }}
     name: Node
     needs: initiad
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     permissions:
       contents: read
       packages: write
