feat: upgrade + audit fixes (#349)
* prepare upgrade

* fix to use relateive timeout timestamp at intertx submit tx

* fix amino

* remove log

* fix to return final version

* fix lint

* fix to iterate all metadata instead of using bond denoms

fix comment

* fix to use account codec

* bump ibc-go pfm

---------

Co-authored-by: sh-cha <snghuncha@gmail.com>

--- a/client/docs/config.json
+++ b/client/docs/config.json
@@ -189,14 +189,6 @@
       "url": "./tmp-swagger-gen/ibc/applications/perm/v1/query.swagger.json"
     },
     {
-      "url": "./tmp-swagger-gen/packetforward/v1/query.swagger.json",
-      "operationIds": {
-        "rename": {
-          "Params": "PFMParams"
-        }
-      }
-    },
-    {
       "url": "./tmp-swagger-gen/initia/intertx/v1/query.swagger.json"
     },
     {
@@ -274,6 +266,17 @@
     },
     {
       "url": "./tmp-swagger-gen/initia/tx/v1/query.swagger.json"
+    },
+    {
+      "url": "./tmp-swagger-gen/sdk/auction/v1/query.swagger.json",
+      "operationIds": {
+        "rename": {
+          "Params": "AuctionParams"
+        }
+      }
+    },
+    {
+      "url": "./tmp-swagger-gen/sdk/mempool/v1/query.swagger.json"
     }
   ]
 }
