--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,7 +17,7 @@ env:
 
 jobs:
   initiad:
-    name: Initiad
+    name: Build Initiad image
     runs-on: ubuntu-22.04
 
     permissions:
@@ -32,10 +32,10 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Log in to the Container registry
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -43,23 +43,24 @@ jobs:
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@v4
+        uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}
 
       - name: Build and push
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v6
         with:
           file: Dockerfile
           push: ${{ startsWith(github.ref, 'refs/tags') }} # push image only for tags
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-        env:
-          VERSION: ${{ github.ref_name }}
+          build-args: |
+            VERSION=${{ github.ref }}
+            COMMIT=${{ github.sha }}
 
   node:
     if: ${{ startsWith(github.ref, 'refs/tags/') }}
-    name: Node
+    name: Build Node image
     needs: initiad
     runs-on: ubuntu-22.04
     permissions:
@@ -71,7 +72,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Log in to the Container registry
         uses: docker/login-action@v2
@@ -92,10 +93,13 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          build-args: "BASE_IMAGE=${{ env.BASE_IMAGE }}"
           file: images/node/Dockerfile
           push: ${{ startsWith(github.ref, 'refs/tags') }} # push image only for tags
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            BASE_IMAGE=${{ env.BASE_IMAGE }}
+            VERSION=${{ github.ref }}
+            COMMIT=${{ github.sha }}
         env:
           BASE_IMAGE: ${{ env.BASE_IMAGE }}
