--- a/client/docs/config.json
+++ b/client/docs/config.json
@@ -268,6 +268,14 @@
       "url": "./tmp-swagger-gen/initia/tx/v1/query.swagger.json"
     },
     {
+      "url": "./tmp-swagger-gen/initia/dynamicfee/v1/query.swagger.json",
+      "operationIds": {
+        "rename": {
+          "Params": "DynamicFeeParams"
+        }
+      }
+    },
+    {
       "url": "./tmp-swagger-gen/sdk/auction/v1/query.swagger.json",
       "operationIds": {
         "rename": {
