--- a/.github/workflows/build-darwin-amd64.yml
+++ b/.github/workflows/build-darwin-amd64.yml
@@ -66,11 +66,9 @@ jobs:
           mv "initia_${VERSION}_Darwin_${ARCH_NAME}.tar.gz" "${GITHUB_WORKSPACE}/"
           rm -f libmovevm.dylib libcompiler.dylib initiad
 
-      - name: Release
-        uses: softprops/action-gh-release@v2
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
         with:
-          files: |
-            initia_${{ env.VERSION }}_Darwin_${{ env.ARCH_NAME }}.tar.gz
-        env:
-          VERSION: ${{ env.VERSION }}
-          ARCH_NAME: ${{ env.ARCH_NAME }}
+          name: initia-darwin-amd64
+          path: initia_${{ env.VERSION }}_Darwin_${{ env.ARCH_NAME }}.tar.gz
+          retention-days: 1
