fix to use ref_name not full ref

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -99,7 +99,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
             BASE_IMAGE=${{ env.BASE_IMAGE }}
-            VERSION=${{ github.ref }}
+            VERSION=${{ github.ref_name }}
             COMMIT=${{ github.sha }}
         env:
           BASE_IMAGE: ${{ env.BASE_IMAGE }}
