--- a/proto/buf.gen.pulsar.yaml
+++ b/proto/buf.gen.pulsar.yaml
@@ -7,9 +7,9 @@ managed:
       - buf.build/googleapis/googleapis
       - buf.build/cosmos/gogo-proto
       - buf.build/cosmos/cosmos-proto
-      - buf.build/cosmos/ibc
     override:
       buf.build/cosmos/cosmos-sdk: cosmossdk.io/api
+      buf.build/cosmos/ibc: github.com/initia-labs/initia/api
 plugins:
   - name: go-pulsar
     out: ../api
