--- a/.github/workflows/build-darwin-amd64.yml
+++ b/.github/workflows/build-darwin-amd64.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    runs-on: macos-13
+    runs-on: macos-15
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
@@ -17,8 +17,6 @@ jobs:
           go-version: "1.23"
       - name: Set environment variables
         run: |
-          L1_NETWORK_NAME="initiation-1"
-          echo "L1_NETWORK_NAME=${L1_NETWORK_NAME}" >> $GITHUB_ENV        
           echo "GOARCH=amd64" >> $GITHUB_ENV
           echo "GOOS=darwin" >> $GITHUB_ENV
           if [[ "${{ github.ref }}" == "refs/tags/"* ]]; then
@@ -44,7 +42,6 @@ jobs:
           echo "VERSION=${VERSION}"
           echo "ARCH_NAME=${ARCH_NAME}"
           echo "MOVEVM_VERSION=${MOVEVM_VERSION}"
-          echo "L1_NETWORK_NAME=${L1_NETWORK_NAME}"
 
       - name: Build and Package for Darwin AMD64
         run: |
@@ -70,5 +67,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: initia-darwin-amd64
-          path: initia_${{ env.VERSION }}_Darwin_${{ env.ARCH_NAME }}.tar.gz
+          path: initia_*.tar.gz
           retention-days: 1
