--- a/.github/workflows/build-darwin-arm64.yml
+++ b/.github/workflows/build-darwin-arm64.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: macos-15
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
@@ -17,10 +17,6 @@ jobs:
           go-version: "1.23"
       - name: Set environment variables
         run: |
-          L1_NETWORK_NAME="initiation-1"
-          echo "L1_NETWORK_NAME=${L1_NETWORK_NAME}" >> $GITHUB_ENV
-          MOVEVM_VERSION=$(go list -m github.com/initia-labs/movevm | awk '{print $2}')    
-          echo "MOVEVM_VERSION=${MOVEVM_VERSION}" >> $GITHUB_ENV        
           echo "GOARCH=arm64" >> $GITHUB_ENV
           echo "GOOS=darwin" >> $GITHUB_ENV
           if [[ "${{ github.ref }}" == "refs/tags/"* ]]; then
@@ -30,6 +26,8 @@ jobs:
           fi
           echo "VERSION=${VERSION}" >> $GITHUB_ENV
           echo "ARCH_NAME=aarch64" >> $GITHUB_ENV
+          MOVEVM_VERSION=$(go list -m github.com/initia-labs/movevm | awk '{print $2}')    
+          echo "MOVEVM_VERSION=${MOVEVM_VERSION}" >> $GITHUB_ENV
 
       - name: Ensure dependencies
         run: |
@@ -42,7 +40,7 @@ jobs:
           echo "GOOS=${GOOS}"
           echo "VERSION=${VERSION}"
           echo "ARCH_NAME=${ARCH_NAME}"
-          echo "L1_NETWORK_NAME=${L1_NETWORK_NAME}"
+          echo "MOVEVM_VERSION=${MOVEVM_VERSION}"
 
       - name: Build and Package for Darwin ARM64
         run: |
@@ -58,5 +56,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: initia-darwin-arm64
-          path: initia_${{ env.VERSION }}_Darwin_${{ env.ARCH_NAME }}.tar.gz
+          path: initia_*.tar.gz
           retention-days: 1
