--- a/.github/workflows/build-linux-arm64.yml
+++ b/.github/workflows/build-linux-arm64.yml
@@ -12,59 +12,45 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+      - name: Set up Go
+        uses: actions/setup-go@v4
         with:
-          platforms: arm64
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+          go-version: "1.23"
 
       - name: Set environment variables
         run: |
-          echo "GOARCH=arm64" >> $GITHUB_ENV
-          echo "GOOS=linux" >> $GITHUB_ENV
-          if [[ "${GITHUB_REF}" == refs/tags/* ]]; then
-            VERSION=${GITHUB_REF#refs/tags/}
-          else
-            VERSION="v0.0.0-${GITHUB_SHA::8}"
           fi
           echo "VERSION=${VERSION}" >> $GITHUB_ENV
           echo "ARCH_NAME=aarch64" >> $GITHUB_ENV
+          MOVEVM_VERSION=$(go list -m github.com/initia-labs/movevm | awk '{print $2}')    
+          echo "MOVEVM_VERSION=${MOVEVM_VERSION}" >> $GITHUB_ENV
+
+      - name: Ensure dependencies
+        run: |
+          go mod tidy
+          go get github.com/initia-labs/movevm@${MOVEVM_VERSION}
+
+      - name: Print environment variables
+        run: |
+          echo "GOARCH=${GOARCH}"
+          echo "GOOS=${GOOS}"
+          echo "VERSION=${VERSION}"
+          echo "ARCH_NAME=${ARCH_NAME}"
+          echo "MOVEVM_VERSION=${MOVEVM_VERSION}"
 
       - name: Build for ARM64
-        env:
-          DOCKER_BUILDKIT: 1
         run: |
-          # Activate BuildKit and create a new builder
-          docker buildx create --use --name arm64-builder --platform linux/arm64
-          docker buildx inspect --bootstrap
-
-          # Building images for ARM64
-          docker buildx build --platform linux/arm64 --load --tag initia/initiad-shared:arm64 . -f Dockerfile.arm64
-
-          # Extract build output using ARM64 images
-          mkdir -p ./build
-          docker create --name temp initia/initiad-shared:arm64
-          docker cp temp:/usr/local/bin/initiad ./build/
-          docker cp temp:/lib/libmovevm.so ./build/
-          docker cp temp:/lib/libcompiler.so ./build/
-          docker rm temp
-
-          # Packaging of results
-          cd ./build \
-          && mv libmovevm.so libmovevm.${ARCH_NAME}.so \
-          && mv libcompiler.so libcompiler.${ARCH_NAME}.so \
+          make build \
+          && cd ./build \
+          && cp ~/go/pkg/mod/github.com/initia-labs/movevm@${MOVEVM_VERSION}/api/libmovevm.${ARCH_NAME}.so ./ \
+          && cp ~/go/pkg/mod/github.com/initia-labs/movevm@${MOVEVM_VERSION}/api/libcompiler.${ARCH_NAME}.so ./ \
           && tar -czvf initia_${VERSION}_Linux_${ARCH_NAME}.tar.gz initiad libmovevm.${ARCH_NAME}.so libcompiler.${ARCH_NAME}.so \
-          && mv initia_${VERSION}_Linux_${ARCH_NAME}.tar.gz $GITHUB_WORKSPACE/ \
-          && rm -rf ./initiad ./libmovevm.${ARCH_NAME}.so ./libcompiler.${ARCH_NAME}.so
-
-          # Remove builder
-          docker buildx rm arm64-builder
+          && mv ./initia_"$VERSION"_Linux_"${ARCH_NAME}".tar.gz ${GITHUB_WORKSPACE}/ \
+          && rm -rf libmovevm.${ARCH_NAME}.so libcompiler.${ARCH_NAME}.so ./initiad
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: initia-linux-arm64
-          path: initia_${{ env.VERSION }}_Linux_${{ env.ARCH_NAME }}.tar.gz
+          path: initia_*.tar.gz
           retention-days: 1
