--- a/proto/buf.gen.pulsar.yaml
+++ b/proto/buf.gen.pulsar.yaml
@@ -10,6 +10,7 @@ managed:
     override:
       buf.build/cosmos/cosmos-sdk: cosmossdk.io/api
       buf.build/cosmos/ibc: github.com/initia-labs/initia/api
+      buf.build/cosmos/ics23: github.com/initia-labs/initia/api
 plugins:
   - name: go-pulsar
     out: ../api
