--- a/x/move/keeper/contracts/Move.toml
+++ b/x/move/keeper/contracts/Move.toml
@@ -8,5 +8,5 @@ InitiaStdlib = { local = "../../../../../movevm/precompile/modules/initia_stdlib
 [addresses]
 initia_std = "0x1"
 std = "0x1"
-TestAccount = "0x2"
 cafe = "0xcafe"
+TestAccount = "_"
