--- a/x/move/keeper/contracts/Move.toml
+++ b/x/move/keeper/contracts/Move.toml
@@ -3,7 +3,7 @@ name = "test1"
 version = "0.0.0"
 
 [dependencies]
-InitiaStdlib = { local = "../../../../../movevm/precompile/modules/initia_stdlib"  }
+InitiaStdlib = { git = "https://github.com/initia-labs/move-natives.git", subdir = "initia_stdlib", rev = "v1.2.0"  }
 
 [addresses]
 initia_std = "0x1"
