--- a/client/docs/config-ibc.json
+++ b/client/docs/config-ibc.json
@@ -76,6 +76,9 @@
     },
     {
       "url": "./tmp-swagger-gen/ibc/applications/perm/v1/query.swagger.json"
+    },
+    {
+      "url": "./tmp-swagger-gen/ratelimit/v1/query.swagger.json"
     }
   ]
 }
