--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -61,6 +61,43 @@ jobs:
             VERSION=${{ github.ref }}
             COMMIT=${{ github.sha }}
 
+  initiad-rocksdb:
+    name: Build Initiad RocksDB image
+    runs-on: ubuntu-22.04
+
+    permissions:
+      contents: read
+      packages: write
+
+    env:
+      IMAGE_NAME: initiad
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v5
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push RocksDB image
+        uses: docker/build-push-action@v6
+        with:
+          file: Dockerfile.rocksdb
+          push: ${{ startsWith(github.ref, 'refs/tags') }}
+          tags: |
+            ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest-rocksdb
+            ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}-rocksdb
+          labels: |
+            version=${{ github.ref_name }}-rocksdb
+          no-cache: true
+          build-args: |
+            VERSION=${{ github.ref_name }}
+            COMMIT=${{ github.sha }}
+
   node:
     if: ${{ startsWith(github.ref, 'refs/tags/') }}
     name: Build Node image
