--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,97 +12,61 @@ on:
       - "go.mod"
       - "go.sum"
 
-permissions:
-  contents: read
-
 env:
   REGISTRY: ghcr.io
+  IMAGE_NAME: initiad
 
 jobs:
-  initiad:
-    name: Build Initiad image
+  build-image:
+    name: Build Docker images
     runs-on: ubuntu-22.04
-
     permissions:
       contents: read
       packages: write
-
-    outputs:
-      tags: ${{ steps.meta.outputs.tags }}
-
-    env:
-      IMAGE_NAME: initiad
 
     steps:
       - name: Checkout
         uses: actions/checkout@v5
 
-      - name: Log in to the Container registry
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}
-
-      - name: Build and push
+      # ============================
+      # 1) NORMAL BUILD (Dockerfile)
+      # ============================
+      - name: Build & Push normal image
         uses: docker/build-push-action@v6
         with:
           file: Dockerfile
-          push: ${{ startsWith(github.ref, 'refs/tags') }} # push image only for tags
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          push: ${{ startsWith(github.ref, 'refs/tags') }}
+          tags: |
+            ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
+            ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}
+          labels: |
+            version=${{ github.ref_name }}
+          no-cache: true
           build-args: |
-            VERSION=${{ github.ref }}
-            COMMIT=${{ github.sha }}
-
-  node:
-    if: ${{ startsWith(github.ref, 'refs/tags/') }}
-    name: Build Node image
-    needs: initiad
-    runs-on: ubuntu-22.04
-    permissions:
-      contents: read
-      packages: write
-
-    env:
-      IMAGE_NAME: node
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v5
-
-      - name: Log in to the Container registry
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}
-
-      - name: Get base image
-        run: echo "BASE_IMAGE=$(echo ${{ needs.initiad.outputs.tags }} | cut -d',' -f1)" >> "$GITHUB_ENV"
-
-      - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          file: images/node/Dockerfile
-          push: ${{ startsWith(github.ref, 'refs/tags') }} # push image only for tags
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          build-args: |
-            BASE_IMAGE=${{ env.BASE_IMAGE }}
             VERSION=${{ github.ref_name }}
             COMMIT=${{ github.sha }}
-        env:
-          BASE_IMAGE: ${{ env.BASE_IMAGE }}
+
+      # ====================================
+      # 2) ROCKSDB BUILD (Dockerfile.rocksdb)
+      # ====================================
+      - name: Build & Push RocksDB image
+        uses: docker/build-push-action@v6
+        with:
+          file: Dockerfile.rocksdb
+          push: ${{ startsWith(github.ref, 'refs/tags') }}
+          tags: |
+            ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest-rocksdb
+            ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}-rocksdb
+          labels: |
+            version=${{ github.ref_name }}-rocksdb
+          no-cache: true
+          build-args: |
+            VERSION=${{ github.ref_name }}
+            COMMIT=${{ github.sha }}
